lab/ingress-nginx/httpbin/ingress-tls-selfsigned.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-tls-selfsigned
spec:
  ingressClassName: "nginx"

  tls:
    - hosts:
        - app.example.com
      secretName: tls-selfsigned
  
  rules:
    - host: "app.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
